[Tango->FCM] Remove static initializer from invalidation client

Bug: 879571, 801985, 880344
TBR=pavely@chromium.org

Change-Id: I224e704c348d031e68e7341122331015d20e9f61
Reviewed-on: https://chromium-review.googlesource.com/1204017
Commit-Queue: Tatiana Gornak <melandory@chromium.org>
Reviewed-by: Tatiana Gornak <melandory@chromium.org>
Cr-Commit-Position: refs/heads/master@{#588543}